updating my profile picture

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
        </p>
        </div>
         <div class="profile">
-            <img class="profile-pic" src="Capture.PNG" alt="">
+            <img class="profile-pic" src="mypicture.PNG" alt="">
         </div>
 
        <div class="button">
